--- a/index.html
+++ b/index.html
@@ -13,23 +13,22 @@
         <ul class="carousel-slides">
           <li class="slide" id="slide1">
                 <div class="slideVisual">
-                    <!--<img src="nature3.png" class="background">-->
-                    <p class="pa">believe in nature</p>
+                    <p class="text">believe in nature</p>
                     <img src="hairvive.png" class="bottle">
                 </div>
             </li>
           <li class="slide" id="slide2">
                 <div class="slideVisual">
-                    <p class="pa">energy from within</p>
+                    <p class="text">energy from within</p>
                     <img src="qivive.png" class="bottle">
                 </div>
                 
             </li>
           <li class="slide" id="slide3">
                 <div class="slideVisual">
-                    <p class="pa">single herb extract granules</p>
+                    <p class="text">single herb extract granules</p>
                     <img src="hairvive.png" class="bottle">
-                    <img src="ski.png" class="ski">
+                    <img src="ski.png" class="motion ski"> <!-- motion object, make sure first class is "motion" and next is the initial class -->
                 </div>
             </li>
           <!-- Add more slides as needed -->
